# 26_STM32_GCCARM_CMAKE

./: .gitignore
I2CTest/: .mxproject  CMakeLists.txt  i2cTest.ioc
I2CTest/App/: AppComm.c  AppComm.h  CMakeLists.txt
I2CTest/Core/Src/: main.c  usart.c
I2CTest/cmake/: gcc-arm-none-eabi.cmake
I2CTest/cmake/stm32cubemx/: CMakeLists.txt
